...
    func processUserSignup(formModel: SignupFormModel) {
        
        if !formModelValidator.isFirstNameValid(firstName: formModel.firstName) {
            view?.displayAlert(
                title: "Error",
                message: "isFirstNameValid",
                accessibilityIdentifier: "errorAlertDialog"
            )
            return
        }
        
        if !formModelValidator.isLastNameValid(lastName: formModel.lastName) {
            view?.displayAlert(
...
                    accessibilityIdentifier: "errorAlertDialog"
                )
            } else {
                self?.view?.displayAlert(
                    title: "Success",
                    message: "The signup operation was successful successful",
                    accessibilityIdentifier: "successAlertDialog"
                )
            }
        }
    }
}

